# miscellany

./: README.md
1key-pcbs/: 1key-tiny-thled.kicad_pcb  1key-tiny.kicad_pcb  1key-weave-cherry-npth.kicad_pcb  1key-weave-noled.kicad_pcb
atreus-hacks/: atreus.kicad_pcb  atreus_case.scad  atreus_case.stl  keeb.ino  keys.h
cherry-mx-lockout/: cherry-mx-lockout.scad  cherry-mx-lockout.stl
industar-lens-cap/: industar-69-cap.scad  industar-69-cap.stl
m90q-cx353/: bracket-Body.stl  bracket.FCStd  bracket.stl
mac-metal-tray-scsi2sdv6/: mac-metal-tray-scsi2sdv6.FCStd  mac-metal-tray-scsi2sdv6.stl
matias-ergo-pro-foot/: matias-ergo-pro-foot.FCStd  matias-ergo-pro-foot.stl
moskva-knob/: knob-no-supports-needed.stl  knob.scad  knob.stl
retro68-demos/: CMakeLists.txt  README.md  mactcp-udp-demo.c  ot-udp-demo.c
retro68-opentransport-tcp-demo/: CMakeLists.txt  README.md  tcp-demo.c
sn2010-fans/: README.md  back-top.FCStd  front-top.FCStd  middle-top-nofan.FCStd  middle-top.FCStd
sn2010-fans/stl/: back-top-Body.stl  front-top-Body.stl  middle-top-Body.stl  middle-top-nofan-Body.stl
softride-bracket/: bracket.FCStd  bracket.stl
sx6012-fans/: README.md  back.FCStd  front.FCStd  middle.FCStd  rear.FCStd
sx6012-fans/stl/: back.stl  front.stl  middle.stl  rear.stl
vax-drive-feet/: vax_bracket-Body.stl  vax_bracket-slot-Body.stl  vax_bracket-slot.FCStd  vax_bracket.FCStd  vax_bracket_flipped-Body.stl  vax_bracket_flipped.FCStd  vax_bracket_flipped_slot-Body.stl  vax_bracket_flipped_slot.FCStd
wombat-hacking/: CMakeLists.txt  README.md  ultra-wombat-hax-tool.c
